# team_iitk_tcs

./: README.md
apc_controller/: CMakeLists.txt  package.xml
apc_controller/data/: above tote.txt  bin_desired_pose.txt  home_pos.txt  object_bin_down.txt  object_bin_up.txt  start_intermediate.txt  start_intermediate_xwam.txt  start_pos.txt  start_pos_pick.txt  start_pos_stow_task.txt  start_pos_xwam (copy).txt  stow_obj_view.txt  toteC1_pos.txt  tote_pick1.txt  tote_pick2.txt
apc_controller/include/: apc_controller.h
apc_controller/launch/: apc_controller.launch
apc_controller/src/: apc_controller.cpp  apc_controller_auto.cpp  stow_controller.cpp  stow_controller_auto.cpp  stow_controller_auto_new_strategy.cpp
apc_controller/srv/: JointMove.srv  rack_registration.srv  stowObjDetect.srv
iitktcs_calibration/: CMakeLists.txt  auto_calibration.m  calibration_error.m  calibration_error.m~  calibration_error_mohit.m  octave-workspace  package.xml
iitktcs_calibration/src/: calibrate_enseno_robot_semi_auto.cpp  calibrate_sensor_robot_auto.cpp  calibration_points_plot.cpp  calibration_transform_setup.cpp  publish_ensenso_registered_cloud.cpp  test_robotcamera_calibration.cpp
iitktcs_controller/: CMakeLists.txt  package.xml
iitktcs_controller/data/: joints.txt
iitktcs_controller/launch/: iitktcs_controller.launch
iitktcs_controller/parameters/: values.yaml
iitktcs_controller/scripts/: backup_2_iitktcs_controller.py  backup_iitktcs_controller.py  controller.py  controller.py~  final_run.py  iitktcs_controller.py  open_gripper.py  present_time.py  time_profiled_iitktcs_controller.py  time_profiled_iitktcs_controller.py~  time_profiled_without_valley_iitktcs_controller.py  time_profiled_without_valley_iitktcs_controller_28_July.py  time_profiled_without_valley_iitktcs_controller_V0_Final.py  vision_call.py  without_valley_detection_iitktcs_controller.py  working_demo_for_time_profiled_without_valley_iitktcs_controller.py
iitktcs_controller/src/: controller_test.cpp  controller_test_utils.cpp  publisher.cpp
iitktcs_motion_planner/: CMakeLists.txt  package.xml
iitktcs_motion_planner/launch/: motion_execute.launch~  motion_planner.launch  motion_planner.launch~  param.launch~  ur10_control.launch  ur10_control.launch~  ur5_control.launch~
iitktcs_motion_planner/removed/: CMakeLists_removed.txt  ur_communication.cpp
iitktcs_motion_planner/src/: motion_planner.cpp  robot_joint_states.cpp  robotarm.cpp
iitktcs_msgs_srvs/: CMakeLists.txt  package.xml
iitktcs_msgs_srvs/msg/: HandleMsg.msg  ValleyMsg.msg  custom_ids.msg  grasp_pose.msg  objects_info.msg
iitktcs_msgs_srvs/srv/: CheckClearProtectiveStop.srv  CheckClearProtectiveStop.srv~  DetectValley.srv  DetectValley.srv~  EnsensoGetCloud.srv  EnsensoRegisteredCloud.srv  GetCloud.srv  GetCloud.srv~  GetFK.srv  GetFK.srv~  GraspPose.srv  GripperPose.srv  GripperPoseGoal.srv  GripperRealRviz.srv  Repose.srv  Retrieval.srv  TestCalibration.srv  UR5Goal.srv  UR5Goal.srv~  UR5PoseGoal.srv  UR5PoseGoal.srv~  computer_vision_stowing_picking.srv  fetch_foscam_ensenso_cloud.srv  fetch_foscam_ensenso_cloud.srv~  gripper_suction_controller.srv  motor_input.srv  pose.srv  pose.srv~  publish_on_topic.srv  static_point_cloud.srv  static_point_cloud.srv~
iitktcs_pose_estimation/: CMakeLists.txt  package.xml
iitktcs_pose_estimation/include/: 3d_pose_estimation_fuction.cpp  3d_pose_estimtion.h
iitktcs_pose_estimation/launch/: new_param.launch  param.launch~
iitktcs_pose_estimation/param/: avery_binder.yaml~  balloons.yaml~  band_aid_tape.yaml~  bath_sponge.yaml  bin_corners.yaml  black_fashion_gloves.yaml  burts_bees_baby_wipes.yaml~  colgate_toothbrush_4pk.yaml~  composition_book.yaml  crayons.yaml  duct_tape.yaml  epsom_salts.yaml~  expo_eraser.yaml  fiskars_scissors.yaml~  flashlight.yaml~  glue_sticks.yaml~  hand_weight.yaml  hanes_socks.yaml  hanes_socks.yaml~  hinged_ruled_index_cards.yaml  ice_cube_tray.yaml  irish_spring_soap.yaml~  laugh_out_loud_jokes.yaml~  marbles.yaml  measuring_spoons.yaml  mesh_cup.yaml  mouse_traps.yaml~  pie_plates.yaml  plastic_wine_glass.yaml  poland_spring_water.yaml  reynolds_wrap.yaml  robots_dvd.yaml~  robots_everywhere.yaml~  scotch_sponges.yaml~  speed_stick.yaml~  table_cloth.yaml  tennis_ball_container.yaml~  ticonderoga_pencils.yaml  tissue_box.yaml  toilet_brush.yaml~  (+2 more)
iitktcs_pose_estimation/pcd/: avery_binder.pcd  band_aid_tape.pcd  burts_bees_baby_wipes.pcd  colgate_toothbrush_4pk.pcd  composition_book.pcd  crayons.pcd  duct_tape.pcd  epsom_salts.pcd  expo_eraser.pcd  fiskars_scissors.pcd  flashlight.pcd  glue_sticks.pcd  hand_weight.pcd  hanes_socks.pcd  hinged_ruled_index_cards.pcd  ice_cube_tray.pcd  irish_spring_soap.pcd  laugh_out_loud_jokes.pcd  mouse_traps.pcd  pie_plates.pcd  poland_spring_water.pcd  reynolds_wrap.pcd  robots_dvd.pcd  robots_everywhere.pcd  scotch_sponges.pcd  speed_stick.pcd  tennis_ball_container.pcd  ticonderoga_pencils.pcd  tissue_box.pcd  toilet_brush.pcd  windex.pcd
iitktcs_pose_estimation/src/: 3d_pose_estimation.cpp  3d_pose_estimation_fuction.cpp  write_yaml.cpp  write_yaml_known.cpp  writing_launch_file.cpp
iitktcs_robot_description/: CMakeLists.txt  package.xml
iitktcs_robot_description/launch/: controller_utils_ur10_vgs.launch  controller_utils_ur10_vgs.launch~  ur10.launch  ur10.launch~  ur10_upload.launch  ur10_upload.launch~  ur5.launch~  ur5_upload.launch~
iitktcs_utils/: CMakeLists.txt  package.xml
iitktcs_utils/include/: occlusion.h  octomap_publisher.h  static_pointcloud_publisher.hpp
iitktcs_utils/launch/: params.launch  params.launch~
iitktcs_utils/params/: bin_info.yaml  bin_info.yaml~  jts_at_event~  jts_drop~  jts_nontarget_bin_drop~  jts~  motion_planner.yaml  motion_planner.yaml~
ik_test_service/: CMakeLists.txt  package.xml
json_maker/: CMakeLists.txt  package.xml
lines_rack_det/: CMakeLists.txt  package.xml
trajectory_rpt/: CMakeLists.txt  joints  joints~  package.xml~
wam_setup_tf/: CMakeLists.txt  package.xml
xwamotion_laser/: CMakeLists.txt  package.xml  package.xml~
(+312 files in other folders)
