<?xml version="1.0"?>
<package>
  <name>iitktcs_calibration</name>
  <version>0.0.0</version>
  <description>The iitktcs_calibration package</description>

  <author email="sharathrjtr@gmail.com">Sharath Jotawar</author>
  <maintainer email="sharathrjtr@gmail.com">Sharath Jotawar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>iitktcs_msgs_srvs</build_depend>

  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
