<?xml version="1.0"?>
<package format="2">
  <name>iitktcs_controller</name>
  <version>0.0.0</version>
  <description>The iitktcs_controller package</description>

  <author email="prasun.pallav@tcs.com">Prasun Pallav</author>
  <maintainer email="prasun.pallav@tcs.com">Prasun Pallav</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  <depend>iitktcs_msgs_srvs</depend>

</package>
