<?xml version="1.0"?>
<package format="2">
  <name>iitktcs_motion_planner</name>
  <version>0.0.0</version>
  <description>The iitktcs_motion_planner package</description>

  <maintainer email="ilab@todo.todo">ilab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <build_depend>iitktcs_msgs_srvs</build_depend>

</package>
