<?xml version="1.0"?>
<package format="2">	
  <name>iitktcs_pose_estimation</name>
  <version>0.0.0</version>
  <description>The ensenso_testing package</description>

  <author email="sharathrjtr@gmail.com">Sharath Jotawar</author>
  <maintainer email="sharathrjtr@gmail.com">Sharath Jotawar</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  
  <buildtool_depend>catkin</buildtool_depend>


    <export>

  </export>
</package>
