<?xml version="1.0"?>
<package>
  <name>iitktcs_robot_description</name>
  <version>0.0.0</version>
  <description>The iitktcs_robot_description package</description>

  <author email="sharathrjtr@gmail.com">Sharath Jotawar</author>
  <maintainer email="sharathrjtr@gmail.com">Sharath Jotawar</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
