<?xml version="1.0"?>
<package>
  <name>iitktcs_utils</name>
  <version>0.0.0</version>
  <description>The iitktcs_utils package</description>

  <author email="prasun.pallav@tcs.com">Prasun Pallav</author>
  <maintainer email="prasun.pallav@tcs.com">Prasun Pallav</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>iitktcs_msgs_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
