<?xml version="1.0"?>
<package>
  <name>json_maker</name>
  <version>0.0.0</version>
  <description>The json_maker package</description>

  <author email="sharathrjtr@gmail.com">Sharath Jotawar</author>
  <maintainer email="sharathrjtr@gmail.com">Sharath Jotawar</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
